--- a/payment.service
+++ b/payment.service
@@ -4,11 +4,11 @@ Description=Payment Service
 [Service]
 User=root
 WorkingDirectory=/app
-Environment=CART_HOST=cart-dev.devops72.online
+Environment=CART_HOST=cart.dev.devops72.online
 Environment=CART_PORT=8080
-Environment=USER_HOST=user-dev.devops72.online
+Environment=USER_HOST=user.dev.devops72.online
 Environment=USER_PORT=8080
-Environment=AMQP_HOST=rabbitmq-dev.devops72.online
+Environment=AMQP_HOST=rabbitmq.dev.devops72.online
 Environment=AMQP_USER=roboshop
 Environment=AMQP_PASS=roboshop123
 
