--- a/user.service
+++ b/user.service
@@ -3,8 +3,8 @@ Description = User Service
 [Service]
 User=roboshop
 Environment=MONGO=true
-Environment=REDIS_HOST=redis.dev.devops72.online
-Environment=MONGO_URL="mongodb://mongodb.dev.devops72.online:27017/users"
+Environment=REDIS_HOST=redis-dev.devops72.online
+Environment=MONGO_URL="mongodb://mongodb-dev.devops72.online:27017/users"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
